# school-food-chain

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  _quick_check.py  _security_check.py  e2e_test.py  init_db.py  requirements.txt  smoke_test.py
backend/alembic/: env.py
backend/app/: audit_utils.py  auth.py  cache.py  celery.py  config.py  database.py  main.py  metrics.py  models.py  rate_limit.py  redis_client.py  schemas.py  websocket.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_gov.py  test_ingredients.py  test_security.py  test_stock.py  test_suppliers.py  test_trace.py  test_users.py
desktop/: .gitignore  index.html  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
desktop/core/: __init__.py  api_client.py  config.py
desktop/src/: App.vue  main.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: login_dialog.py  main_window.py
docs/: architecture.md  deploy.md
mobile/: .gitignore  app.js  app.json  app.wxss  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
school-food-chain-intro/: school-food-chain-intro.html
school-food-chain-readme/: school-food-chain-readme.html
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.cjs  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
(+106 files in other folders)
